--- a/QueryExamples/QueryExamples.csproj
+++ b/QueryExamples/QueryExamples.csproj
@@ -117,6 +117,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReallyReallyComplicatedExample\Account.cs" />
+    <Compile Include="ReallyReallyComplicatedExample\ComplexExample.cs" />
+    <Compile Include="ReallyReallyComplicatedExample\HoldingsReport.cs" />
+    <Compile Include="ReallyReallyComplicatedExample\Position.cs" />
+    <Compile Include="ReallyReallyComplicatedExample\Price.cs" />
+    <Compile Include="ReallyReallyComplicatedExample\Security.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="sqlite3.dll">
