--- a/QueryExamples/QueryExamples.csproj
+++ b/QueryExamples/QueryExamples.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -110,6 +110,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReallyReallyComplicatedExample\Account.cs" />
+    <Compile Include="Clock.cs" />
     <Compile Include="ReallyReallyComplicatedExample\ComplexExample.cs" />
     <Compile Include="ReallyReallyComplicatedExample\HoldingsReport.cs" />
     <Compile Include="ReallyReallyComplicatedExample\Position.cs" />
