added ignores for the nu lib folders

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,13 @@
 *.log.*
 obj
 bin
-ThirdParty/Castle/*.xml
-ThirdParty/Castle/*.XML
-ThirdParty/NHibernate/trunk
-ThirdParty/NHibernate/2.0.x
-ThirdParty/Rhino-Tools/rhino-tools
-ThirdParty/Rhino-Tools/trunk
+lib/castle.core/
+lib/castle.dynamicproxy2/
+lib/fluentmigrator/
+lib/fluentnhibernate/
+lib/log4net/
+lib/nbuilder/
+lib/nhibernate/
 *~
 *.swp
 _ReSharper*
